feat: add delete command for kafka and sr contexts